Implementação de monitoramento com o Spring Boot Actuator

--- a/Java_Odontoprev_v2/src/main/resources/application.properties
+++ b/Java_Odontoprev_v2/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=Java_Odontoprev_v2
 
+#  Spring Boot Actuator
+#########################################
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.server.port=8080
+
 #  Banco h2
 #########################################
 
